--- a/Web_Scrapping_Jobs.ipynb
+++ b/Web_Scrapping_Jobs.ipynb
@@ -76,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = 'bonnie.majie@gmail.com'\n",
-    "password = '55686068'\n",
+    "email = 'XXXXXX@gmail.com'\n",
+    "password = 'XXXXXX'\n",
     "\n",
     "email_element = driver.find_element_by_xpath('//input[@type=\"email\"]')\n",
     "password_element = driver.find_element_by_xpath('//input[@type=\"password\"]')\n",
